[package]
name = "mini-blockchain"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
ecdsa = { version = "0.16.9", features = ["serde"] }
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
rand = "0.8.5"
hex = "0.4.3"
dirs = "5.0.1"
comfy-table = "7.1.1"
colored = "2.1.0"